[gd_scene load_steps=13 format=3 uid="uid://on73whrfey7o"]

[ext_resource type="Script" uid="uid://o8pamx1yydlh" path="res://scripts/UI/ui.gd" id="1_5en4g"]
[ext_resource type="Texture2D" uid="uid://pthdnyca7pek" path="res://assets/UI/test.png" id="1_dj8aq"]
[ext_resource type="PackedScene" uid="uid://28bld6ebjyy6" path="res://scenes/UI/menu_projets.tscn" id="3_ua6yw"]
[ext_resource type="PackedScene" uid="uid://w68s7km80fw0" path="res://scenes/UI/menu_scientifiques.tscn" id="4_ua6yw"]
[ext_resource type="Texture2D" uid="uid://h8vpungsiv7a" path="res://assets/UI/tilesetT3.png" id="5_75u2n"]
[ext_resource type="PackedScene" uid="uid://cbkq81vgo5viw" path="res://scenes/UI/button_buildings.tscn" id="6_84lt7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dj8aq"]
texture = ExtResource("1_dj8aq")
region_rect = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ua6yw"]
texture = ExtResource("1_dj8aq")
region_rect = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mhjpf"]
texture = ExtResource("5_75u2n")
region_rect = Rect2(0, 448, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yamhi"]
texture = ExtResource("5_75u2n")
region_rect = Rect2(0, 448, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qd4ol"]
texture = ExtResource("5_75u2n")
region_rect = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgnrc"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5en4g")

[node name="BaseContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 10

[node name="hBoxScience" type="HBoxContainer" parent="BaseContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Science" type="Button" parent="BaseContainer/hBoxScience"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SciencePerSec" type="NinePatchRect" parent="BaseContainer/hBoxScience"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_75u2n")
region_rect = Rect2(320, 448, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="hBoxProjScien" type="HBoxContainer" parent="BaseContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="projScienMenu" type="NinePatchRect" parent="BaseContainer/hBoxProjScien"]
custom_minimum_size = Vector2(100, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_75u2n")
region_rect = Rect2(320, 448, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="vBoxBtns" type="VBoxContainer" parent="BaseContainer/hBoxProjScien/projScienMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="btnProjets" type="Button" parent="BaseContainer/hBoxProjScien/projScienMenu/vBoxBtns"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxTexture_dj8aq")

[node name="btnScientists" type="Button" parent="BaseContainer/hBoxProjScien/projScienMenu/vBoxBtns"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxTexture_ua6yw")

[node name="MenuProjects" parent="BaseContainer/hBoxProjScien" instance=ExtResource("3_ua6yw")]
visible = false
layout_mode = 2

[node name="menuScientifics" parent="BaseContainer/hBoxProjScien" instance=ExtResource("4_ua6yw")]
visible = false
layout_mode = 2

[node name="buildingsMenu" type="NinePatchRect" parent="BaseContainer"]
custom_minimum_size = Vector2(650, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("5_75u2n")
region_rect = Rect2(320, 448, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="hBoxBtns" type="HBoxContainer" parent="BaseContainer/buildingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -32.0
offset_right = 180.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="btnPath" parent="BaseContainer/buildingsMenu/hBoxBtns" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Créer des chemins"
textPopup = "Les chemins permettent aux scientifiques de ne pas mourir de froid"
icon_pos = Vector2(3, 0)

[node name="btnCat1" parent="BaseContainer/buildingsMenu/hBoxBtns" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Créer des bâtiments de catégorie 1"

[node name="btnCat2" parent="BaseContainer/buildingsMenu/hBoxBtns" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Créer des bâtiments de catégorie 2"
icon_pos = Vector2(1, 0)

[node name="btnCat3" parent="BaseContainer/buildingsMenu/hBoxBtns" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Créer des bâtiments de catégorie 3"
icon_pos = Vector2(2, 0)

[node name="btnDelete" parent="BaseContainer/buildingsMenu/hBoxBtns" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Détruire des bâtiments"
icon_pos = Vector2(4, 0)

[node name="hBoxBtnCat1" type="HBoxContainer" parent="BaseContainer/buildingsMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -32.0
offset_right = 254.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="btnLabGlaciology" parent="BaseContainer/buildingsMenu/hBoxBtnCat1" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Laboratoire de glaciologie"
textPopup = "oui"
icon_pos = Vector2(0, 1)

[node name="btnLabPhysicAtmo" parent="BaseContainer/buildingsMenu/hBoxBtnCat1" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Laboratoire de physique athmosphérique"
textPopup = "oui"
icon_pos = Vector2(0, 2)

[node name="btnLabMagne" parent="BaseContainer/buildingsMenu/hBoxBtnCat1" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Laboratoire de magnetisme"
textPopup = "oui"
icon_pos = Vector2(0, 3)

[node name="btnLabBiology" parent="BaseContainer/buildingsMenu/hBoxBtnCat1" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Laboratoire de biologie humaine"
textPopup = "oui"
icon_pos = Vector2(0, 4)

[node name="btnIcemine" parent="BaseContainer/buildingsMenu/hBoxBtnCat1" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Mine de glace"
textPopup = "oui"
icon_pos = Vector2(0, 5)

[node name="btnSerre" parent="BaseContainer/buildingsMenu/hBoxBtnCat1" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Serre"
textPopup = "oui"
icon_pos = Vector2(0, 6)

[node name="btnBack" type="Button" parent="BaseContainer/buildingsMenu/hBoxBtnCat1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_mhjpf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mhjpf")
theme_override_styles/normal = SubResource("StyleBoxTexture_mhjpf")

[node name="hBoxBtnCat2" type="HBoxContainer" parent="BaseContainer/buildingsMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -32.0
offset_right = 296.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="btnDormitory" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Dortoirs"
textPopup = "oui"
icon_pos = Vector2(1, 1)

[node name="btnKitchen" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Cuisines"
textPopup = "oui"
icon_pos = Vector2(1, 2)

[node name="btnDinning" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Salle à manger"
textPopup = "oui"
icon_pos = Vector2(1, 3)

[node name="btnToilets" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Toilettes"
textPopup = "oui"
icon_pos = Vector2(1, 4)

[node name="btnShower" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Douches"
textPopup = "oui"
icon_pos = Vector2(1, 5)

[node name="btnRest" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Salle de repos"
textPopup = "oui"
icon_pos = Vector2(1, 6)

[node name="btnSport" parent="BaseContainer/buildingsMenu/hBoxBtnCat2" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Salle de sport"
textPopup = "oui"
icon_pos = Vector2(1, 7)

[node name="btnBack" type="Button" parent="BaseContainer/buildingsMenu/hBoxBtnCat2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yamhi")

[node name="hBoxBtnCat3" type="HBoxContainer" parent="BaseContainer/buildingsMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -32.0
offset_right = 143.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="btnRecycle" parent="BaseContainer/buildingsMenu/hBoxBtnCat3" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Centre de recyclage des déchets"
textPopup = "oui"
icon_pos = Vector2(2, 1)

[node name="btnWater" parent="BaseContainer/buildingsMenu/hBoxBtnCat3" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Centre de traitement de l'eau"
textPopup = "oui"
icon_pos = Vector2(2, 2)

[node name="btnElec" parent="BaseContainer/buildingsMenu/hBoxBtnCat3" instance=ExtResource("6_84lt7")]
layout_mode = 2
textBuildingName = "Centrale électrique"
textPopup = "oui"
icon_pos = Vector2(2, 3)

[node name="btnBack" type="Button" parent="BaseContainer/buildingsMenu/hBoxBtnCat3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_qd4ol")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qd4ol")
theme_override_styles/normal = SubResource("StyleBoxTexture_qd4ol")

[node name="ParametersMargin" type="MarginContainer" parent="BaseContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_bottom = 10

[node name="Parameters" type="Button" parent="BaseContainer/ParametersMargin"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = SubResource("AtlasTexture_wgnrc")

[connection signal="pressed" from="BaseContainer/hBoxProjScien/projScienMenu/vBoxBtns/btnProjets" to="." method="_on_button_projets_pressed"]
[connection signal="pressed" from="BaseContainer/hBoxProjScien/projScienMenu/vBoxBtns/btnScientists" to="." method="_on_button_scientists_pressed"]
[connection signal="pressed" from="BaseContainer/buildingsMenu/hBoxBtnCat1/btnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="BaseContainer/buildingsMenu/hBoxBtnCat2/btnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="BaseContainer/buildingsMenu/hBoxBtnCat3/btnBack" to="." method="_on_btn_back_pressed"]
